--- a/package.json
+++ b/package.json
@@ -21,10 +21,27 @@
     "@angular/http": "5.2.9",
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
-    "@ionic-native/core": "4.6.0",
+    "@ionic-native/calendar": "^4.7.0",
+    "@ionic-native/camera": "^4.7.0",
+    "@ionic-native/core": "^4.6.0",
+    "@ionic-native/date-picker": "^4.7.0",
+    "@ionic-native/email-composer": "^4.7.0",
+    "@ionic-native/geolocation": "^4.7.0",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/status-bar": "4.6.0",
+    "@ionic-native/toast": "^4.7.0",
     "@ionic/storage": "2.1.3",
+    "cordova-android": "6.4.0",
+    "cordova-plugin-calendar": "^5.0.0",
+    "cordova-plugin-camera": "^4.0.3",
+    "cordova-plugin-datepicker": "^0.9.3",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-toast": "^2.6.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.8",
@@ -35,5 +52,22 @@
     "@ionic/app-scripts": "3.1.8",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-datepicker": {},
+      "cordova-plugin-x-toast": {},
+      "cordova-plugin-calendar": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-camera": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
